@@ -11,7 +11,6 @@ import me.wolfyscript.utilities.libraries.com.fasterxml.jackson.annotation.JsonS
 import org.bukkit.entity.Player;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @JsonPropertyOrder({"id", "icon", "name", "description", "auto"})
 public class Category extends CategorySettings {
@@ -41,26 +40,26 @@ public class Category extends CategorySettings {
         }
         containers.clear();
         List<RecipeContainer> recipeContainers = new ArrayList<>();
-        recipeContainers.addAll(this.groups.stream().map(RecipeContainer::new).collect(Collectors.toList()));
-        recipeContainers.addAll(this.namespaces.stream().flatMap(s -> Registry.RECIPES.get(s).stream().filter(recipe -> recipe.getGroup().isEmpty() || !groups.contains(recipe.getGroup())).map(RecipeContainer::new)).collect(Collectors.toList()));
+        recipeContainers.addAll(this.groups.stream().map(RecipeContainer::new).toList());
+        recipeContainers.addAll(this.namespaces.stream().flatMap(s -> Registry.RECIPES.get(s).stream().filter(recipe -> recipe.getGroup().isEmpty() || !groups.contains(recipe.getGroup())).map(RecipeContainer::new)).toList());
         recipeContainers.addAll(this.recipes.stream().map(namespacedKey -> {
             ICustomRecipe<?, ?> recipe = Registry.RECIPES.get(namespacedKey);
             return recipe == null ? null : new RecipeContainer(recipe);
-        }).filter(Objects::nonNull).collect(Collectors.toList()));
-        containers.addAll(recipeContainers.stream().distinct().sorted().collect(Collectors.toList()));
+        }).filter(Objects::nonNull).toList());
+        containers.addAll(recipeContainers.stream().distinct().sorted().toList());
     }
 
     public void indexFilters(CategoryFilter filter) {
-        indexedFilters.put(filter, containers.stream().filter(filter::filter).collect(Collectors.toList()));
+        indexedFilters.put(filter, containers.stream().filter(filter::filter).toList());
     }
 
     public List<RecipeContainer> getRecipeList(Player player, CategoryFilter filter) {
-        return getContainers(filter).stream().filter(container -> container.canView(player)).collect(Collectors.toList());
+        return getContainers(filter).stream().filter(container -> container.canView(player)).toList();
     }
 
     public List<RecipeContainer> getRecipeList(Player player, CategoryFilter filter, EliteWorkbench eliteWorkbench) {
         if (eliteWorkbench != null) {
-            return getContainers(filter).stream().filter(container -> container.canView(player) && container.isValid(eliteWorkbench)).collect(Collectors.toList());
+            return getContainers(filter).stream().filter(container -> container.canView(player) && container.isValid(eliteWorkbench)).toList();
         }
         return getRecipeList(player, filter);
     }
